# LabAIAutomation

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
hamilton_tools/: CAPABILITIES.md  __init__.py  cli.py  client.py  output.py
opentrons_agent/: __main__.py  agent.py  agent_cli.py  cli.py  data_ingestion.py  knowledge.py  profile.py  prompts.py  settings.py  web.py
opentrons_agent/knowledge_docs/: 96-channel-pipette.md  OT2ToFlex.md  casual_examples.md  commands-v0.0.1.md  deck_layout.md  flex_stacker_usage.md  full-examples.md  out_of_tips_error_219.md  pcr_protocols_with_csv.md  runtime_parameters.md  serial_dilution_examples.md  standard-loadname-info.md  transfer_function_notes.md  transfer_with_liquid_class.md
opentrons_tools/: __init__.py  cli.py  client.py  discovery.py  notifications.py  safety.py
tests/: test_client.py
