[project]
name = "opentrons-agent-tools"
version = "0.1.0"
description = "Small command-line tools for inspecting and controlling Opentrons robots through their HTTP/MQTT APIs."
requires-python = ">=3.9"

[project.scripts]
ot-tools = "opentrons_tools.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
