[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrons-agent-tools"
version = "0.1.0"
description = "LLM-powered Opentrons protocol generator and command-line tools for inspecting and controlling Opentrons robots."
requires-python = ">=3.11"
dependencies = [
    "anthropic[vertex]>=0.42.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "gradio>=5.0.0",
]

[project.scripts]
ot-tools = "opentrons_tools.cli:main"
hamilton-tools = "hamilton_tools.cli:main"
opentrons-agent = "opentrons_agent.cli:main"
opentrons-agent-web = "opentrons_agent.web:main"
opentrons-agent-api = "opentrons_agent.agent_cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
opentrons_agent = ["knowledge_docs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
